--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-Flask>=0.12
-twilio~=6.0.0
+aniso8601==7.0.0
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
+Flask==1.1.0
+Flask-Cors==3.0.8
+Flask-Jsonpify==1.5.0
+Flask-RESTful==0.3.7
+ibm-cloud-sdk-core==0.5.1
+ibm-watson==3.1.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+PyJWT==1.7.1
+PySocks==1.7.0
+python-dateutil==2.8.0
+pytz==2019.1
+requests==2.22.0
+six==1.12.0
+twilio==6.0.0
+urllib3==1.25.3
+websocket-client==0.48.0
+Werkzeug==0.15.4
